--- a/IleanaMusic.csproj
+++ b/IleanaMusic.csproj
@@ -1,13 +1,104 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{1AFBE7A9-D21A-4DBF-A6D4-8CCC733B8AA5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>IleanaMusic</RootNamespace>
+    <AssemblyName>IleanaMusic</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
-
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="4.5.2.1" />
-    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
+    <Reference Include="GemBox.Spreadsheet, Version=43.0.35.1084, Culture=neutral, PublicKeyToken=b1b72c69714d4847, processorArchitecture=MSIL">
+      <HintPath>..\packages\GemBox.Spreadsheet.43.0.0.1084\lib\net35\GemBox.Spreadsheet.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="ReachFramework" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Printing" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Compile Include="Data\AppData.cs" />
+    <Compile Include="Data\IData.cs" />
+    <Compile Include="Data\PieceData.cs" />
+    <Compile Include="Data\Repositories\IRepository.cs" />
+    <Compile Include="Data\Repositories\Repository.cs" />
+    <Compile Include="Data\Services\IPieceService.cs" />
+    <Compile Include="Data\Services\IPlaylistService.cs" />
+    <Compile Include="Data\Services\PieceService.cs" />
+    <Compile Include="Data\Services\PlaylistService.cs" />
+    <Compile Include="Helpers\ConsoleReader.cs" />
+    <Compile Include="Helpers\ConsoleWriter.cs" />
+    <Compile Include="Helpers\PlaylistFragments.cs" />
+    <Compile Include="Models\BaseEntity.cs" />
+    <Compile Include="Models\Gender.cs" />
+    <Compile Include="Models\MusicFormat.cs" />
+    <Compile Include="Models\Piece.cs" />
+    <Compile Include="Models\PlayList.cs" />
+    <Compile Include="Models\Quality.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\AddPieceScreen.cs" />
+    <Compile Include="Screens\AddPlaylistScreen.cs" />
+    <Compile Include="Screens\DeletePieceScreen.cs" />
+    <Compile Include="Screens\DeletePlaylistScreen.cs" />
+    <Compile Include="Screens\EditPieceScreen.cs" />
+    <Compile Include="Screens\EditPlaylistScreen.cs" />
+    <Compile Include="Screens\MenuOneScreen.cs" />
+    <Compile Include="Screens\MenuScreen.cs" />
+    <Compile Include="Screens\PdfReportScreen.cs" />
+    <Compile Include="Screens\PieceList.cs" />
+    <Compile Include="Screens\PlayListsMenuScreen.cs" />
+    <Compile Include="Screens\PlaylistsScreen.cs" />
+    <Compile Include="Screens\ReporterMenuScreen.cs" />
+    <Compile Include="Screens\SearchPieceInPlaylistScreen.cs" />
+    <Compile Include="Screens\SearchPieceScreen.cs" />
+    <Compile Include="Screens\SearchPlaylistScreen.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
