--- a/IleanaMusic.csproj
+++ b/IleanaMusic.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Screens\DeletePlaylistScreen.cs" />
     <Compile Include="Screens\EditPieceScreen.cs" />
     <Compile Include="Screens\EditPlaylistScreen.cs" />
+    <Compile Include="Screens\ExcelReportScreen.cs" />
     <Compile Include="Screens\MenuOneScreen.cs" />
     <Compile Include="Screens\MenuScreen.cs" />
     <Compile Include="Screens\PdfReportScreen.cs" />
