--- a/IleanaMusic.csproj
+++ b/IleanaMusic.csproj
@@ -81,20 +81,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\AddPieceScreen.cs" />
     <Compile Include="Screens\AddPlaylistScreen.cs" />
-    <Compile Include="Screens\CsvReportScreen.cs" />
+    <Compile Include="Screens\Reporter\CsvReportScreen.cs" />
     <Compile Include="Screens\DeletePieceScreen.cs" />
     <Compile Include="Screens\DeletePlaylistScreen.cs" />
     <Compile Include="Screens\EditPieceScreen.cs" />
     <Compile Include="Screens\EditPlaylistScreen.cs" />
-    <Compile Include="Screens\ExcelReportScreen.cs" />
+    <Compile Include="Screens\Reporter\ExcelReportScreen.cs" />
     <Compile Include="Screens\ExportPiecesScreen.cs" />
     <Compile Include="Screens\MenuOneScreen.cs" />
     <Compile Include="Screens\MenuScreen.cs" />
-    <Compile Include="Screens\PdfReportScreen.cs" />
+    <Compile Include="Screens\Reporter\PdfReportScreen.cs" />
     <Compile Include="Screens\PieceList.cs" />
     <Compile Include="Screens\PlayListsMenuScreen.cs" />
     <Compile Include="Screens\PlaylistsScreen.cs" />
-    <Compile Include="Screens\ReporterMenuScreen.cs" />
+    <Compile Include="Screens\Reporter\ReporterMenuScreen.cs" />
     <Compile Include="Screens\SearchPieceInPlaylistScreen.cs" />
     <Compile Include="Screens\SearchPieceScreen.cs" />
     <Compile Include="Screens\SearchPlaylistScreen.cs" />
