refactor: Placed all screens in a folder location

--- a/IleanaMusic.csproj
+++ b/IleanaMusic.csproj
@@ -79,25 +79,24 @@
     <Compile Include="Models\ReportType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screens\AddPieceScreen.cs" />
-    <Compile Include="Screens\AddPlaylistScreen.cs" />
+    <Compile Include="Screens\Piece\AddPieceScreen.cs" />
+    <Compile Include="Screens\Playlist\AddPlaylistScreen.cs" />
     <Compile Include="Screens\Reporter\CsvReportScreen.cs" />
-    <Compile Include="Screens\DeletePieceScreen.cs" />
-    <Compile Include="Screens\DeletePlaylistScreen.cs" />
-    <Compile Include="Screens\EditPieceScreen.cs" />
-    <Compile Include="Screens\EditPlaylistScreen.cs" />
+    <Compile Include="Screens\Piece\DeletePieceScreen.cs" />
+    <Compile Include="Screens\Playlist\DeletePlaylistScreen.cs" />
+    <Compile Include="Screens\Piece\EditPieceScreen.cs" />
+    <Compile Include="Screens\Playlist\EditPlaylistScreen.cs" />
     <Compile Include="Screens\Reporter\ExcelReportScreen.cs" />
-    <Compile Include="Screens\ExportPiecesScreen.cs" />
-    <Compile Include="Screens\MenuOneScreen.cs" />
-    <Compile Include="Screens\MenuScreen.cs" />
+    <Compile Include="Screens\Export\ExportPiecesScreen.cs" />
+    <Compile Include="Screens\Piece\MenuOneScreen.cs" />
     <Compile Include="Screens\Reporter\PdfReportScreen.cs" />
-    <Compile Include="Screens\PieceList.cs" />
-    <Compile Include="Screens\PlayListsMenuScreen.cs" />
-    <Compile Include="Screens\PlaylistsScreen.cs" />
+    <Compile Include="Screens\Piece\PieceList.cs" />
+    <Compile Include="Screens\Playlist\PlayListsMenuScreen.cs" />
+    <Compile Include="Screens\Playlist\PlaylistsScreen.cs" />
     <Compile Include="Screens\Reporter\ReporterMenuScreen.cs" />
-    <Compile Include="Screens\SearchPieceInPlaylistScreen.cs" />
-    <Compile Include="Screens\SearchPieceScreen.cs" />
-    <Compile Include="Screens\SearchPlaylistScreen.cs" />
+    <Compile Include="Screens\Playlist\SearchPieceInPlaylistScreen.cs" />
+    <Compile Include="Screens\Piece\SearchPieceScreen.cs" />
+    <Compile Include="Screens\Playlist\SearchPlaylistScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
