--- a/IleanaMusic.csproj
+++ b/IleanaMusic.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Models\ReportType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\Export\ExportMenuScreen.cs" />
+    <Compile Include="Screens\Export\JsonExportScreen.cs" />
     <Compile Include="Screens\Piece\AddPieceScreen.cs" />
     <Compile Include="Screens\Playlist\AddPlaylistScreen.cs" />
     <Compile Include="Screens\Reporter\CsvReportScreen.cs" />
